--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Your New Jekyll Site
+name: App송이 기술 블로그
 description: Blogging about stuffs
 meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
@@ -6,14 +6,14 @@ markdown: kramdown
 highlighter: rouge
 logo: false
 paginate: 15
-baseurl: /kasper
+baseurl: ""
 domain_name: "http://yourblog-domain.com"
 google_analytics: "UA-XXXXXXXX-X"
 plugins: [jekyll-paginate]
 
 # Details for the RSS feed generator
-url: ""
-author: "Your Name"
+url: "appsonge.github.io"
+author: "App송이"
 
 # Disqus config
 disqus-shortname: ""
