--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: false
 paginate: 15
 baseurl: ""
 domain_name: "http://yourblog-domain.com"
-google_analytics: "UA-XXXXXXXX-X"
+google_analytics: "UA-176074048-1"
 plugins: [jekyll-paginate]
 
 # Details for the RSS feed generator
